name: hs-captcha
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
synopsis: Generate images suitable for use as CAPTCHAs in online web-form security.

Library
  exposed-modules: Graphics.Captcha
  build-depends: gd, bytestring, random
